# urban_taxonomy

./: .gitignore  Dockerfile  LICENSE.txt  README.md  full_run.sh  pyproject.toml
archive/notebooks/: UMAP_optimisation.ipynb  Untitled.ipynb  additional_chars.ipynb  additional_chars2.ipynb  analyse_knns_by_neighbourhood.ipynb  bua.ipynb  building_height.ipynb  buildings_comparison.ipynb  cluster_exploration.ipynb  cluster_validation.ipynb  clustering-search.ipynb  clustering.ipynb  connected_shape.ipynb  define_subregions.ipynb  dendrogram.ipynb  direct_shape_comparison.ipynb  download_building_footprints.ipynb  download_eubucco.ipynb  download_streets.ipynb  exemplar_clustering.ipynb  explore_hierarchical.ipynb  explore_metrics.ipynb  fast_ward.ipynb  feature_importance.ipynb  generate_grid.ipynb  generate_h3.ipynb  generate_regions.ipynb  generate_regions_hdbscan.ipynb  linkage_exploration.ipynb  lithuania.ipynb  metrics.ipynb  morphotope_postprocessing.ipynb  mutual_knn_cluster_start.ipynb  nearest_neighbours.ipynb  new_clustering.ipynb  new_morphotopes.ipynb  process_building_footpritns.ipynb  process_region-Copy1.ipynb  region_clustering.ipynb  spatially_weighted_context.ipynb  (+4 more)
archive/scratchbooks/: OSM streets.ipynb  PCA optimisation.ipynb  generate_context.ipynb  generate_elements.ipynb  process_regions.ipynb
code/: 01_download_building_footprints.ipynb  02_standardise_footprints.ipynb  03_generate_regions.ipynb  04_download_streets.ipynb  04b_download_lithuania.ipynb  05_preprocess_cz_housing.ipynb  06_morphotope_postprocessing.ipynb  07_morphotope_chars.ipynb  08_clustering.ipynb  09_noise.ipynb  10_cluster_characteristics.ipynb  11_evaluation.ipynb  11_morphotope_geometry.ipynb  12_postprocess_morphotope_ids.ipynb  13_evaluation.ipynb  14_sensitivity_of_sa3.ipynb  15_sa3_parameter.ipynb  Untitled.ipynb  abundance_maps.ipynb  adaptive_buffer.ipynb  add_regions_from_new_buildings.ipynb  cdata.parquet  cluster_exploration.ipynb  cluster_naming.ipynb  clustering.ipynb  comparisons.ipynb  data_product_guide.ipynb  data_product_pens.ipynb  data_products.ipynb  data_products_guide.ipynb  define_subregions.ipynb  diagrams.ipynb  divisive_kmeans.ipynb  donwload_belgium.ipynb  download_austria.ipynb  download_building_footprints.ipynb  download_czechia.ipynb  download_eubucco.ipynb  download_poland.ipynb  download_slovakia.ipynb  (+65 more)
code/files/tmpoogacvvo/2025-09-24.0/theme=transportation/type=segment/: part-00019-e2914535-7d8f-49b9-a8f6-521b1890d5d4-c000_76_7fc8aaaf_1795f31f.parquet
core/: __init__.py  cluster_validation.py  generate_buildings.py  generate_chars.py  generate_clusters.py  generate_context.py  generate_elements.py  generate_merged.py  generate_ngraphs.py  generate_streets.py  utils.py
core/tests/: tests.py
notebooks/: OSM streets.ipynb  PCA optimisation.ipynb  UMAP_optimisation.ipynb  additional_chars.ipynb  analyse_knns_by_neighbourhood.ipynb  bua.ipynb  bua2.ipynb  cluster_exploration.ipynb  cluster_metric.ipynb  cluster_validation.ipynb  clustering.ipynb  clustering_log.txt  compare_old_new_characters.ipynb  compare_old_new_characters_barcelona.ipynb  compare_old_new_characters_prague.ipynb  connected_shape.ipynb  context_optimisation.ipynb  context_tests.ipynb  dendrogram.ipynb  differences.ipynb  download_bua.ipynb  download_building_footprints.ipynb  download_germany_data.ipynb  download_microsoft_buildings.ipynb  download_streets.ipynb  eom_experiments.ipynb  eurofab_model.ipynb  evoc_test.ipynb  exemplar_clustering.ipynb  explore_building_footprints.ipynb  explore_cadastre_footprints.ipynb  explore_data.ipynb  explore_hierarchical.ipynb  explore_tesselations.ipynb  full_kmeans_clutsering.ipynb  generate_buildings.ipynb  generate_chars.ipynb  generate_context.ipynb  generate_regions.ipynb  generate_regions_hdbscan.ipynb  (+18 more)
scratchbooks/: buff_test.ipynb  cluster_validation.ipynb  context_tests.ipynb  enclosed_tesselations.ipynb  generate_buildings.ipynb  generate_chars_old.ipynb  generate_elements.ipynb  generate_ngraphs.ipynb  process_regions.ipynb  street_preprocessing.ipynb  street_timing.ipynb
src/core/: checking_crs_of_files.ipynb  cluster_validation.py  generate_buildings.py  generate_chars.py  generate_clusters.py  generate_context.py  generate_elements.py  generate_merged_primary_chars.py  generate_ngraphs.py  generate_streets.py  geopackage_for_generate_elements_output.ipynb  interactive_dendrogram.py  seeing_duplicate_building_0.ipynb  seeing_neigh_graphs_created.ipynb  utils.py
src/core/tests/: generate_test_data.py  tests.py
test/: buildings_temp_region.pq  streets_temp_region.pq
test/actual_data/: building_graph_temp_region.parquet  buildings_chars_temp_region.parquet  buildings_temp_region.parquet  data_morphotopes_temp_region_75_0_None_None_False.pq  enclosure_graph_temp_region.parquet  enclosure_temp_region.parquet  enclosures_chars_temp_region.parquet  nodes_chars_temp_region.parquet  nodes_graph_temp_region.parquet  primary_chars_temp_region.parquet  street_graph_temp_region.parquet  streets_chars_temp_region.parquet  streets_temp_region.parquet  tessellation_graph_temp_region.parquet  tessellation_labels_morphotopes_temp_region_75_0_None_None_False.pq  tessellation_temp_region.parquet  tessellations_chars_temp_region.parquet
