[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "core"
dynamic = ["version"]
#authors = [
#    { name = "", email = "" },
#    { name = "", email = "" },
#    { name = "", email = "" },
#]

#maintainers = [{ name = "" }]
license = { text = "BSD 3-Clause" }
description = "State-of-the-Art simplification of street network geometry with Python"
keywords = [""]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "momepy",
    "umap-learn",
    "fast_hdbscan",
    "jupyterlab",
    "pyarrow",
    "matplotlib",
    "lonboard",
    "folium",
    "mapclassify",
    "datashader",
    "bokeh",
    "holoviews",
    "geoplanar"
]


[project.urls]
Home = "https://github.com/uscuni/"
Repository = "https://github.com/uscuni/simplification"

[project.optional-dependencies]
tests = [
    "codecov",
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]


[tool.setuptools.packages.find]
include = ["core", "core.*"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
lint.select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
 "*__init__.py" = [
     "F401",  # imported but unused
     "F403",  # star import; unable to detect undefined names
 ]

[tool.coverage.run]
source = ["./core"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["core/tests/*"]
