[project]
authors = [{name = "Krasen Samardzhiev", email = "krasensam@gmail.com"}]
description = "Add a short description here"
name = "core"
requires-python = "== 3.12.*"
version = "0.1.0"
dependencies = ["evoc>=0.1.1,<0.2", "dataframe-image>=0.2.7,<0.3", "geoplanar>=0.4.0,<0.5"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
core = { path = ".", editable = true }

[tool.pixi.tasks]
make_tests_dir = "mkdir -p test/processed_data/"
generate_test_data = {cmd="python src/core/tests/generate_test_data.py", depends-on=["make_tests_dir"]}
tests = "pytest src/core/tests/tests.py"


[tool.pixi.dependencies]
jupyterlab = ">=4.2.5,<5"
umap-learn = ">=0.5.6,<0.6"
pyarrow = ">=17.0.0,<18"
matplotlib = ">=3.9.2,<4"
lonboard = ">=0.9.3,<0.10"
folium = ">=0.17.0,<0.18"
mapclassify = ">=2.8.0,<3"
datashader = ">=0.16.3,<0.17"
bokeh = "3.1.*"
holoviews = ">=1.18.3,<2"
dask = ">=2024.8.2,<2025"
pip = ">=24.2,<25"
sidecar = ">=0.7.0,<0.8"
glasbey = ">=0.2.1,<0.3"
scikit-image = ">=0.24.0,<0.25"
colorcet = ">=3.1.0,<4"
pandas = ">=2.2.2,<3"
esda = ">=2.6.0,<3"
pytest = ">=8.3.2,<9"
hdbscan = ">=0.8.38.post2,<0.9"
jupyter-scatter = ">=0.21.1,<0.22"
openpyxl = ">=3.1.5,<4"
h3 = ">=4.2.0,<5"
h3-py = ">=4.1.1,<5"
rioxarray = ">=0.17.0,<0.18"
xvec = ">=0.3.1,<0.4"
tobler = ">=0.12.0,<0.13"
shapely = ">=2.1.0,<3"
fast_hdbscan = ">=0.2.2,<0.3"
neatnet = ">=0.1.1"
momepy = ">=0.10.0,<0.11"
contextily = ">=1.6.2,<2"
matplotlib-scalebar = ">=0.9.0,<0.10"
tippecanoe = ">=2.78.0,<3"
ruff = ">=0.13.2,<0.14"
